v0.9.x/_sources/reference/fury.actors.rst.txt
.. AUTO-GENERATED FILE -- DO NOT EDIT!

:mod:`actors`
=============
.. automodule:: fury.actors

.. currentmodule:: fury.actors
.. autosummary::


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`actors.odf_slicer`
--------------------------------
.. automodule:: fury.actors.odf_slicer

.. currentmodule:: fury.actors.odf_slicer
.. autosummary::

   OdfSlicerActor

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`actors.peak`
--------------------------
.. automodule:: fury.actors.peak

.. currentmodule:: fury.actors.peak
.. autosummary::

   PeakActor


.. currentmodule:: fury.actors


.. currentmodule:: fury.actors.odf_slicer


:class:`OdfSlicerActor`
~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: OdfSlicerActor
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


.. currentmodule:: fury.actors.peak


:class:`PeakActor`
~~~~~~~~~~~~~~~~~~


.. autoclass:: PeakActor
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

